--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -620,8 +620,8 @@
 	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
 	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
-	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
@@ -636,26 +636,26 @@
 	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
 	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.socket_adder": "Orb of Digging",
 	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"mmorpg.currency.socket_adder": "Orb of Digging",
 	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
@@ -1047,7 +1047,7 @@
 	"mmorpg.stat.increased_quantity": "Item Find",
 	"mmorpg.stat.int_dmg": "Spell Damage",
 	"mmorpg.stat.int_dmg_received": "Spell Damage Received",
-	"mmorpg.stat.intelligence": "intelligence",
+	"mmorpg.stat.intelligence": "Intelligence",
 	"mmorpg.stat.jewel_socket": "Jewel Sockets",
 	"mmorpg.stat.learn_arrow_barrage": "Learn Arrow Barrage",
 	"mmorpg.stat.learn_arrow_storm": "Learn Arrow Storm",
@@ -1253,7 +1253,7 @@
 	"mmorpg.stat.staff_spell_spell_dmg": "Staff Spell Damage",
 	"mmorpg.stat.str_dmg": "Melee Damage",
 	"mmorpg.stat.str_dmg_received": "Melee Damage Received",
-	"mmorpg.stat.strength": "Strength",
+	"mmorpg.stat.strength": "strength",
 	"mmorpg.stat.summon_cdr": "Summon Spell Cooldown Reduction",
 	"mmorpg.stat.summon_damage": "Summon Damage",
 	"mmorpg.stat.summon_duration": "Summon Duration",
