--- a/src/main/resources/assets/mmorpg/lang/manual.json
+++ b/src/main/resources/assets/mmorpg/lang/manual.json
@@ -89,6 +89,9 @@
 "effect.mmorpg.anti_poison": "Anti Poison",
 "effect.mmorpg.scroll_buff": "Scroll Buff",
 "effect.mmorpg.instant_arrows": "Instant Arrows",
+"effect.mmorpg.meal": "Meal Buff",
+"effect.mmorpg.fish": "Seafood Buff",
+"effect.mmorpg.potion": "Potion Buff",
 
 
 "item.mmorpg.loot_crate.common": "Common Item Loot Crate",
