--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -58,3 +58,5 @@ v.5.3.2
 Higher Affix rarities are a lot easier to obtain than the gear rarity (mythic affixes are more often found than mythic items)
 
 - buffs from items now show duration as status effects (but the status effects themselves have nothing to do with the buff) (its just for visual clarity)
+
+- added Korean translation
