--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -80,3 +80,5 @@ v.5.3.5
 - removed tooltip cutting if too long, it seems vanilla does it anyway so it was double cutting
 - increased base mana and energy that scales per lvl
 - added explode minions spell
+- added LEVEL_DISTANCE_PENALTY_LEEWAY, example if set to 2, mobs 2 lvls higher or lower won't have xp penalty applied, but it starts at 3 lvls higher
+- fixed some untranslatable text, not all
