--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -84,3 +84,5 @@ v.5.3.5
 - fixed some untranslatable text, not all
 - fix stations stopping to work "randomly", turns out caching player no good when player dies
 - fixed effects, they now actually disappear and tick and also their stacks work now
+- dot dmg can now crit
+- removed reflect
