--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -86,3 +86,5 @@ v.5.3.5
 - fixed effects, they now actually disappear and tick and also their stacks work now
 - dot dmg can now crit
 - removed reflect
+- fixed charge regen bug
+- your summons will no longer drown trying to attack fish
