--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -906,9 +906,9 @@
 	"mmorpg.stat.bleed_resistance": "Bleed Resistance",
 	"mmorpg.stat.bleed_strength": "Bleed Strength",
 	"mmorpg.stat.block_chance": "Block Chance",
-	"mmorpg.stat.block_leech_cap": "Total Block Leech Per Second",
+	"mmorpg.stat.block_leech_cap": "Max Block Leech Rate",
 	"mmorpg.stat.blood": "Blood",
-	"mmorpg.stat.blood_leech_cap": "Total Blood Leech Per Second",
+	"mmorpg.stat.blood_leech_cap": "Max Blood Leech Rate",
 	"mmorpg.stat.blood_per_10_strength": "§a[VAL1] §4❤ Blood§7 per 10 §b★ Strength§7",
 	"mmorpg.stat.blood_user": "§7You now use §4❤ Blood§7 instead of §9☯ Mana§7",
 	"mmorpg.stat.bonus_exp": "Bonus Experience",
@@ -1001,7 +1001,7 @@
 	"mmorpg.stat.enchanting_misc_drop_bonus": "Misc Drops",
 	"mmorpg.stat.enchanting_triple_drop": "Triple Drop Chance",
 	"mmorpg.stat.energy": "Energy",
-	"mmorpg.stat.energy_leech_cap": "Total Energy Leech Per Second",
+	"mmorpg.stat.energy_leech_cap": "Max Energy Leech Rate",
 	"mmorpg.stat.energy_on_hit_hit": "Energy on Hit",
 	"mmorpg.stat.energy_per_sec": "Energy Per Regen",
 	"mmorpg.stat.energy_regen": "Energy Regen",
@@ -1059,7 +1059,7 @@
 	"mmorpg.stat.heal_over_time_eff_duration": "§7§a[VAL1]§7% to duration of Heal over Time effects on you.",
 	"mmorpg.stat.heal_spell_dmg": "Heal Damage",
 	"mmorpg.stat.health": "Health",
-	"mmorpg.stat.health_leech_cap": "Total Health Leech Per Second",
+	"mmorpg.stat.health_leech_cap": "Max Health Leech Rate",
 	"mmorpg.stat.health_on_hit_hit": "Health on Hit",
 	"mmorpg.stat.health_on_kill": "Health on Kill",
 	"mmorpg.stat.health_per_10_dexterity": "§a[VAL1] §c❤ Health§7 per 10 §b★ Dexterity§7",
@@ -1206,13 +1206,13 @@
 	"mmorpg.stat.magic_find": "Magic Find",
 	"mmorpg.stat.magic_shield": "Magic Shield",
 	"mmorpg.stat.magic_shield_heal": "Magic Shield Healing",
-	"mmorpg.stat.magic_shield_leech_cap": "Total Magic Shield Leech Per Second",
+	"mmorpg.stat.magic_shield_leech_cap": "Max Magic Shield Leech Rate",
 	"mmorpg.stat.magic_shield_on_hit_hit": "Magic Shield on Hit",
 	"mmorpg.stat.magic_shield_per_sec": "Magic Shield Per Regen",
 	"mmorpg.stat.magic_shield_regen": "Magic Shield Regen",
 	"mmorpg.stat.mana": "Mana",
 	"mmorpg.stat.mana_cost": "Mana Cost",
-	"mmorpg.stat.mana_leech_cap": "Total Mana Leech Per Second",
+	"mmorpg.stat.mana_leech_cap": "Max Mana Leech Rate",
 	"mmorpg.stat.mana_on_hit_hit": "Mana on Hit",
 	"mmorpg.stat.mana_on_kill": "Mana on Kill",
 	"mmorpg.stat.mana_per_10_intelligence": "§a[VAL1] §9☯ Mana§7 per 10 §b★ Intelligence§7",
